<resources>
    <string name="app_name">Share Some Photo</string>
    <string name="permissionImagesCode">123</string>

    <string name="btn_signUp">Sign Up</string>
    <string name="label_orSignUp">or, Sign Up</string>
    <string name="btn_logIn">Log in</string>
    <string name="label_orLogIn">or, Log in</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_eMail">Email</string>
    <string name="user_profile_image">User profile image</string>
    <string name="btn_logout">Logout</string>
    <string name="err_msg_data_loading">Error occurred while loading data</string>
    <string name="err_msg_field_cant_be_empty">Field can\'t be empty</string>
    <string name="err_msg_wrong_email_format">Wrong Email format</string>
    <string name="err_msg_whiteSpaces_not_allowed">Whitespaces not allowed</string>
    <string name="err_msg_username_too_long">Username is too long</string>
    <string name="feed_image">Feed image</string>
    <string name="profile_menu_item">Profile</string>
    <string name="users_list_descr_menu_item">Users</string>
    <string name="users_feeds_descr_menu_item">Feeds</string>
    <string name="users_list_menu_item">Users list</string>
    <string name="my_profile_descr_menu_item">My profile</string>
    <string name="follow_user">Follow</string>
    <string name="send_message_to_user">Send message</string>
    <string name="add_feed">Add feed</string>
    <string name="profile_actions">Profile actions</string>
    <string name="another_profile_actions">Another profile actions</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="feeds">Feeds</string>
    <string name="send">Send</string>
    <string name="chats">Chats</string>
    <string name="chats_with_users">Chats with users</string>

</resources>