<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.harnet.sharesomephoto.model.User" />
        <variable
            name="followingUsers"
            type="java.util.List" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_details_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible">

        <LinearLayout
            android:id="@+id/details_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:baselineAligned="false">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/feeds_UserDescr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Theme.ShareSomePhoto.userStatisticField" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/feeds"
                    style="@style/Theme.ShareSomePhoto.userStatisticLabel" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/followers_UserDescr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Theme.ShareSomePhoto.userStatisticField" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    style="@style/Theme.ShareSomePhoto.userStatisticLabel" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/following_UserDescr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{followingUsers.size()}"
                    style="@style/Theme.ShareSomePhoto.userStatisticField" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    style="@style/Theme.ShareSomePhoto.userStatisticLabel" />

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logOut_btn_DetailsBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_block" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>